--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RRS - Séquence de Réponse Rapide</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link href="fonts.css" rel="stylesheet">
     <style>
         body {
             background-color: #333;
